fix(test): solve JPMS issues in flinkboot-test module-info